--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "minimist": "^1.2.6",
     "mongoose": "^6.2.4",
     "mpath": "^0.9.0",
-    "multer": "^1.4.4",
+    "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.2.4",
     "nodemon": "^2.0.16",
     "paytmchecksum": "^1.5.0",
